--- a/app/src/main/res/layout/activity_progress.xml
+++ b/app/src/main/res/layout/activity_progress.xml
@@ -172,6 +172,27 @@
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/btnResultTags"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginRight="3pt"
+                        app:srcCompat="@drawable/ic_label_outline_black_18dp" />
+
+                <TextView
+                    android:id="@+id/tvTags"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:singleLine="true" />
+                </LinearLayout>
             </TableRow>
         </TableLayout>
 
