--- a/app/src/main/res/layout/aexercise_layout.xml
+++ b/app/src/main/res/layout/aexercise_layout.xml
@@ -97,13 +97,36 @@
             android:orientation="horizontal">
         </LinearLayout>
 
-        <ImageButton
-            android:id="@+id/btnRollback"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.2"
-            android:background="@color/dark_blue"
-            app:srcCompat="@drawable/undo075" />
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/btnRollback"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.2"
+                android:background="@color/dark_blue"
+                app:srcCompat="@drawable/ic_undo_48dp" />
+
+            <ImageView
+                android:id="@+id/btnComment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="0.2"
+                android:background="@color/dark_blue"
+                app:srcCompat="@drawable/ic_note_add_gray_18dp" />
+
+            <ImageView
+                android:id="@+id/btnExerciseTags"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="0.2"
+                app:srcCompat="@drawable/ic_label_outline_gray_36dp" />
+        </LinearLayout>
 
     </LinearLayout>
 
